--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,9 +1,11 @@
 name: terraform plan workflow
 
 on:
-  push:
-    branches-ignore:
-    - main
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'infrastructure/**'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
